device/fido: fix a crash in IsUVPAA if Touch ID is flag-enabled.

In edeeec75f64c937efabc13a975e53b1174c1461e [formerly 9aa7c54540178d4bc52f6ffc87567d76beb99094]
AuthenticatorImpl::IsUserVerifyingPlatformAuthenticatorAvailable was
changed to make Touch ID unavailable in Incognito and if the embedder
does not provide a configuration for the Touch ID authenticator. The
latter check dereferenced a nullptr in AuthenticatorImpl's
request_delegate_.  request_delegate_ only gets initialized for the
duration of a MakeCredential or GetAssertion request. It is
uninitialized during IsUVPAA.

This works around the issue by adding a
IsWebAuthenticationTouchIdAuthenticatorSupported instance method to
ContentBrowserClient, so that the feature support can be checked without
requiring a request delegate instance.

Bug: 869651
Change-Id: Ib64a2278d63047d68876e224d44a9aab96f9cfea
Reviewed-on: https://chromium-review.googlesource.com/1157605
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Reviewed-by: Kim Paulhamus <kpaulhamus@chromium.org>
Commit-Queue: Martin Kreichgauer <martinkr@google.com>
Cr-Commit-Position: refs/heads/master@{#580014}
Former-commit-id: bcfda9cfef7e65ecee20cd15f52f9a390f109923