content/public/browser/content_browser_client.cc
@@ -741,6 +741,12 @@ ContentBrowserClient::GetWebAuthenticationRequestDelegate(
   return std::make_unique<AuthenticatorRequestClientDelegate>();
 }
 
+#if defined(OS_MACOSX)
+bool ContentBrowserClient::IsWebAuthenticationTouchIdAuthenticatorSupported() {
+  return false;
+}
+#endif
+
 std::unique_ptr<net::ClientCertStore>
 ContentBrowserClient::CreateClientCertStore(ResourceContext* resource_context) {
   return nullptr;
